Add steps for Java setup and Docker image build

--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -8,5 +8,20 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-      - run: echo "Build successful"
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Setup Java
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+
+      - name: Build with Maven
+        run: mvn clean package
+        working-directory: ./backend
+
+      - name: Build Docker image
+        run: docker build -t backend-image ./backend
